start hardcode for login und optimize global vars + design basic elements globaly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,8 @@
     <a class="link" href="">Konto erstellen</a>
   </div>
 
+  <app-login></app-login>
+
   <div class="info-links d-none">
     <a class="link" href="">Impressum</a>
     <a class="link" href="">Datenschutz</a>
