--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+<div class="login">
+  <h1>Anmeldung</h1>
+
+  <p>
+    Wir empfehlen dir, die E-Mail-Adresse zu nutzen, die du bei der Arbeit
+    verwendest.
+  </p>
+
+  <mat-form-field appearance="outline">
+    <mat-icon matPrefix>email</mat-icon>
+    <input matInput placeholder="beispielname&#64;email.com" />
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <input matInput placeholder="Passwort" />
+  </mat-form-field>
+
+  <a href="" class="link">Passwort vergessen?</a>
+
+  <div class="cutline">
+    <p>ODER</p>
+  </div>
+
+  <div class="google">
+    <img src="assets/img/google.webp" alt="" />
+    <p>Anmelden mit Google</p>
+  </div>
+
+  <div class="buttons">
+    <button mat-flat-button class="button-primary">Anmelden</button>
+    <button mat-flat-button class="button-secondary">Gäste-Login</button>
+  </div>
+</div>
