--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,33 +1,18 @@
-<div class="login">
-  <h1>Anmeldung</h1>
-
-  <p>
-    Wir empfehlen dir, die E-Mail-Adresse zu nutzen, die du bei der Arbeit
-    verwendest.
-  </p>
-
-  <mat-form-field appearance="outline">
-    <mat-icon matPrefix>email</mat-icon>
-    <input matInput placeholder="beispielname&#64;email.com" />
-  </mat-form-field>
-
-  <mat-form-field appearance="outline">
-    <input matInput placeholder="Passwort" />
-  </mat-form-field>
-
-  <a href="" class="link">Passwort vergessen?</a>
-
-  <div class="cutline">
-    <p>ODER</p>
+<div class="landing-page">
+  <div class="logo">
+    <img src="assets/img/logo.webp" alt="" />
+    <img src="assets/img/logo_name.webp" alt="" />
   </div>
 
-  <div class="google">
-    <img src="assets/img/google.webp" alt="" />
-    <p>Anmelden mit Google</p>
+  <div class="register d-none">
+    <p>Neu bei DABubble?</p>
+    <a class="link" href="">Konto erstellen</a>
   </div>
 
-  <div class="buttons">
-    <button mat-flat-button class="button-primary">Anmelden</button>
-    <button mat-flat-button class="button-secondary">Gäste-Login</button>
+  <app-login-dialog></app-login-dialog>
+
+  <div class="info-links d-none">
+    <a class="link" href="">Impressum</a>
+    <a class="link" href="">Datenschutz</a>
   </div>
 </div>
