Header component with first style

--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<header>
+  <div class="logo">
+    <img src="assets/img/logo.webp" alt="" />
+    <img src="assets/img/logo_name.webp" alt="" />
+  </div>
+  <div class="search-field">
+    <mat-form-field appearance="outline">
+      <input matInput placeholder="Devspace durchsuchen" />
+      <mat-icon matSuffix>search</mat-icon>
+    </mat-form-field>
+  </div>
+  <div class="profile">
+    <p>Frederik Beck</p>
+    <img src="./assets/img/frederik-beck.png" alt="" />
+    <mat-icon>keyboard_arrow_down</mat-icon>
+  </div>
+</header>
