Added the component for the message-area-header

--- a/src/app/main/main-message-area/main-message-area.component.html
+++ b/src/app/main/main-message-area/main-message-area.component.html
@@ -1,1 +1,5 @@
-<p>main-message-area works!</p>
+<section>
+  <mat-card appearance="outlined" class="mat-card-container">
+    <mat-card-content>Simple card</mat-card-content>
+  </mat-card>
+</section>
