--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div class="landing-page">
-  <div class="logo">
+  <!-- <div class="logo">
     <img src="assets/img/logo.webp" alt="" />
     <img src="assets/img/logo_name.webp" alt="" />
-  </div>
+  </div> -->
 
   <div class="register d-none">
     <p>Neu bei DABubble?</p>
     <a class="link" href="">Konto erstellen</a>
   </div>
 
-  <app-login></app-login>
+  <!-- <app-login></app-login> -->
 
   <div class="info-links d-none">
     <a class="link" href="">Impressum</a>
