Search field styling without material

--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -4,10 +4,10 @@
     <img src="assets/img/logo_name.webp" alt="" />
   </div>
   <div class="search-field">
-    <mat-form-field appearance="outline">
-      <input matInput placeholder="Devspace durchsuchen" />
-      <mat-icon matSuffix>search</mat-icon>
-    </mat-form-field>
+    <!-- <mat-form-field appearance="outline"> -->
+    <input placeholder="Devspace durchsuchen" />
+    <mat-icon>search</mat-icon>
+    <!-- </mat-form-field> -->
   </div>
   <div class="profile">
     <p>Frederik Beck</p>
