--- a/src/app/main/header/header.component.scss
+++ b/src/app/main/header/header.component.scss
@@ -3,6 +3,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: var(--bg-color);
 
   .logo {
     display: flex;
@@ -21,19 +22,31 @@ header {
 
   .search-field {
     color: var(--grey-color);
-    font-size: var(--fontsize-24);
-    font-family: var(--font-nunito);
-    flex: 1;
+    position: relative;
     display: flex;
     align-items: center;
 
-    mat-form-field {
-      flex: 1;
-    }
+    gap: 16px;
+    flex: 1;
 
-    ::ng-deep .mat-mdc-form-field-subscript-wrapper,
-    ::ng-deep .mat-mdc-form-field-bottom-align {
-      display: none !important;
+    mat-icon {
+      position: absolute;
+      right: var(--padding-32);
+    }
+    input {
+      width: 100%;
+      font-size: var(--fontsize-24);
+      font-family: var(--font-nunito);
+      padding: var(--padding-16) var(--padding-16) var(--padding-16)
+        var(--padding-32);
+      border-radius: 42px;
+      border: none;
+      &:hover {
+        outline: 1px solid var(--purple2-purple-color);
+      }
+      &:focus-visible {
+        outline: 1px solid var(--purple1-purple-color);
+      }
     }
   }
 
