--- a/src/app/main/header/header.component.scss
+++ b/src/app/main/header/header.component.scss
@@ -57,16 +57,31 @@ header {
     justify-content: flex-end;
     gap: var(--gap-20);
     width: 510px;
+    cursor: pointer;
 
     p {
       font-size: var(--fontsize-32);
       font-weight: 700;
     }
 
-    img {
-      height: 70px;
-      width: 70px;
-      border-radius: 50%;
+    .image-with-badge {
+      position: relative;
+      img {
+        height: 70px;
+        width: 70px;
+        border-radius: 50%;
+      }
+
+      .badge {
+        height: 18px;
+        width: 18px;
+        border-radius: 50%;
+        border: 1px solid var(--text-color);
+        background-color: var(--online-color);
+        position: absolute;
+        bottom: 6px;
+        right: 0;
+      }
     }
   }
 }
