Implemented the header and the channel description component, which opens in a mat-menu.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="landing-page">
+<div class="page">
   <!-- <div class="logo">
     <img src="assets/img/logo.webp" alt="" />
     <img src="assets/img/logo_name.webp" alt="" />
