--- a/src/app/main/main-message-area/main-message-area.component.html
+++ b/src/app/main/main-message-area/main-message-area.component.html
@@ -1,5 +1,7 @@
 <section>
   <mat-card appearance="outlined" class="mat-card-container">
-    <mat-card-content>Simple card</mat-card-content>
+    <mat-card-content>
+      <app-message-area-header></app-message-area-header>
+    </mat-card-content>
   </mat-card>
 </section>
