--- a/src/app/main/main-message-area/main-message-area.component.scss
+++ b/src/app/main/main-message-area/main-message-area.component.scss
@@ -1,10 +1,19 @@
 section {
-    width: 70vw;
+    width: 60vw;
     height: 85svh;
-    margin-top: 10svh;
-    margin-left: 15vw;
+    margin-left: 22.5vw;
     align-items: flex-start;
     justify-content: flex-start;
+    display: flex;
+}
+
+mat-card-content {
+    height: 10svh;
+}
+
+app-message-area-header {
+    width: 100%;
+    height: 100%;
     display: flex;
 }
 
@@ -14,4 +23,12 @@ section {
     background-color: var(--text-color);
     border-radius: 30px;
     box-shadow: 0px 2px 2px 0px #00000014;
+}
+
+.mat-mdc-card-content {
+    padding: 0;
+
+    &:first-child, &:last-child {
+        padding: 0;
+    }
 }
