--- a/src/app/main/header/profile-dialog/profile-dialog.component.html
+++ b/src/app/main/header/profile-dialog/profile-dialog.component.html
@@ -1,3 +1,4 @@
 <mat-card class="card" appearance="outlined">
-  <mat-card-content>Simple card</mat-card-content>
+  <button class="button-secondary profile-dialog-button">Profil</button>
+  <button class="button-secondary profile-dialog-button">Log out</button>
 </mat-card>
