--- a/src/app/main/header/profile-dialog/profile-dialog.component.scss
+++ b/src/app/main/header/profile-dialog/profile-dialog.component.scss
@@ -30,7 +30,7 @@
   box-shadow: none !important;
 
   &:hover {
-    background-color: var(--light-purple-color) !important;
+    background-color: #eceefe !important;
     color: var(--purple1-color) !important;
     cursor: pointer;
   }
