finish login hardcode

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,14 +4,14 @@
     <img src="assets/img/logo_name.webp" alt="" />
   </div>
 
-  <div class="register d-none">
+  <div class="register">
     <p>Neu bei DABubble?</p>
     <a class="link" href="">Konto erstellen</a>
   </div>
 
   <app-login-dialog></app-login-dialog>
 
-  <div class="info-links d-none">
+  <div class="info-links">
     <a class="link" href="">Impressum</a>
     <a class="link" href="">Datenschutz</a>
   </div>
