Added a mat menu with emojis for the messages.

--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.html
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.html
@@ -4,6 +4,8 @@
       mat-button
       [matMenuTriggerFor]="chooseChannelMenu"
       class="button-channel-name"
+      [class.menu-opened]="isMenuOpened"
+      (click)="isMenuOpened = true"
     >
       <svg
         width="20"
