--- a/src/app/main/main-message-area/main-message-area.component.html
+++ b/src/app/main/main-message-area/main-message-area.component.html
@@ -2,6 +2,8 @@
   <mat-card appearance="outlined" class="mat-card-container">
     <mat-card-content>
       <app-message-area-header></app-message-area-header>
+      <app-message-area-chat-history></app-message-area-chat-history>
+      <app-message-area-new-message></app-message-area-new-message>
     </mat-card-content>
   </mat-card>
 </section>
