--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
@@ -1,6 +1,6 @@
 app-message-area-header {
   width: 100%;
-  height: 20svh;
+  height: 10svh !important;
 }
 
 mat-toolbar {
@@ -10,7 +10,7 @@ mat-toolbar {
   align-items: center;
   width: 100%;
   box-shadow: 0px 2px 10px 0px rgba($color: #000000, $alpha: 0.08);
-  height: 100%;
+  height: 10svh !important;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   border-bottom-left-radius: 0;
@@ -30,7 +30,8 @@ mat-toolbar {
   gap: 10px;
   padding: 5px 20px;
 
-  &:hover {
+  &:hover,
+  &.menu-opened {
     background-color: var(--bg-color);
     cursor: pointer;
     color: var(--purple3-purple-color) !important;
@@ -38,7 +39,8 @@ mat-toolbar {
     transform: scale(1.002);
   }
 
-  &:hover svg {
+  &:hover svg,
+  &.menu-opened svg {
     fill: var(--purple3-purple-color);
   }
 }
@@ -47,7 +49,7 @@ mat-toolbar {
   border-radius: 0px 30px 30px 30px;
   box-shadow: 0px 6px 10px 0px #00000033;
   padding: 0;
-  max-width: 60vw;
+  max-width: 50vw;
 }
 
 #mat-menu-panel-1,
