--- a/src/app/landing-page/register/register.component.html
+++ b/src/app/landing-page/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="register">
-  <mat-icon class="back-icon">arrow_back</mat-icon>
+  <mat-icon class="back-icon" [routerLink]="['/']">arrow_back</mat-icon>
 
   <h1>Konto erstellen</h1>
 
