--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,2 +1,33 @@
 <app-header></app-header>
+
+<div class="sidenav-button-container">
+  <button mat-raised-button>
+    <p>Workspace-Menü schließen</p>
+
+    <svg
+      width="18"
+      height="19"
+      viewBox="0 0 18 19"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <rect
+        x="1"
+        y="1.5"
+        width="16"
+        height="16"
+        rx="1"
+        stroke="black"
+        stroke-width="2"
+      />
+      <path d="M6.71436 1.5V17.5" stroke="black" stroke-width="2" />
+      <path
+        d="M10.143 11.7857L12.0752 9.85354C12.2704 9.65828 12.2704 9.3417 12.0752 9.14644L10.143 7.21428"
+        stroke="black"
+        stroke-width="2"
+        stroke-linecap="round"
+      />
+    </svg>
+  </button>
+</div>
 <app-main-message-area></app-main-message-area>
