--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
   --purple2-color: #797ef3;
   --purple3-color: #535af1;
   --light-purple-color: #adb0d9;
+  --light-purple-color2: #eceefe;
   --text-color: #ffffff;
   --grey-color: #686868;
   --black-color: #000000;
