--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,11 +2,19 @@
 
 <mat-drawer-container class="example-container" autosize>
   <mat-drawer #drawer class="example-sidenav" mode="side">
-    <p>Auto-resizing sidenav</p>
+    <mat-toolbar class="sidenav-toolbar">
+      <div class="toolbar-header">
+        <img src="./assets/img/Workspace logo.png" alt="" />
+        <span>Devspace</span>
+      </div>
+      <button mat-icon-button class="toolbar-icon">
+        <mat-icon fontSet="material-symbols-outlined">edit_square</mat-icon>
+      </button>
+    </mat-toolbar>
   </mat-drawer>
 </mat-drawer-container>
 <div class="sidenav-button-container">
-  <button type="button" mat-button (click)="drawer.toggle()">
+  <button (click)="drawer.toggle()">
     <p>Workspace-Menü schließen</p>
 
     <svg
