Added the new message input and the mat menus for the messsage area header.

--- a/src/app/main/main-message-area/main-message-area.component.scss
+++ b/src/app/main/main-message-area/main-message-area.component.scss
@@ -1,6 +1,6 @@
 section {
-  width: 60vw;
-  height: 85svh;
+  width: 100%;
+  height: 100%;
   margin-left: 22.5vw;
   align-items: flex-start;
   justify-content: flex-start;
