--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
@@ -1,1 +1,5 @@
-<p>message-area-new-message works!</p>
+<section>
+    <div class="input-primary">
+        <input type="text" placeholder="Nachricht an #Entwicklerteam"/>
+    </div>
+</section>
