--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
@@ -57,6 +57,7 @@ mat-toolbar {
   border-radius: 30px 0px 30px 30px;
   box-shadow: 0px 6px 10px 0px #00000033;
   padding: 10px 20px;
+  max-width: 50vw;
 }
 
 .cdk-overlay-container {
@@ -96,7 +97,7 @@ mat-toolbar {
     margin-left: 10px;
   }
 
-  &:hover {
+  &:hover, &.menu-opened {
     background-color: var(--bg-color);
     cursor: pointer;
 
@@ -120,7 +121,7 @@ mat-toolbar {
     height: 14px;
   }
 
-  &:hover {
+  &:hover, &.menu-opened {
     translate: 0 -1px;
     transform: scale(1.002);
     cursor: pointer;
