--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,2 +1,4 @@
-<app-header></app-header>
-<app-main-message-area></app-main-message-area>
+<section>
+  <app-header></app-header>
+  <app-main-message-area></app-main-message-area>
+</section>
