--- a/src/app/main/main-message-area/message-area-header/channel-members-list/channel-members-list.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-members-list/channel-members-list.component.html
@@ -6,21 +6,21 @@
   <div class="members-container">
     <div class="member">
       <img
-        src="../../../../assets/img/Elias Neumann.png"
+        src="../../../../assets/img/frederik-beck.png"
         alt="Profile Picture"
       />
       <span>Frederick Beck (Du)</span>
     </div>
     <div class="member">
       <img
-        src="../../../../assets/img/Elias Neumann.png"
+        src="../../../../assets/img/frederik-beck.png"
         alt="Profile Picture"
       />
       <span>Elias Neumann</span>
     </div>
     <div class="member">
       <img
-        src="../../../../assets/img/Elias Neumann.png"
+        src="../../../../assets/img/frederik-beck.png"
         alt="Profile Picture"
       />
       <span>Elias Neumann</span>
