--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.html
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.html
@@ -37,8 +37,8 @@
       #memberListMenuTrigger="matMenuTrigger"
       class="button-channel-member-list"
     >
-      <img src="../../../../assets/img/Elias Neumann.png" alt="" />
-      <img src="../../../../assets/img/Elise Roth.png" alt="" />
+      <img src="../../../../assets/img/frederik-beck.png" alt="Profile Picture" />
+      <img src="../../../../assets/img/frederik-beck.png" alt="" />
       <img src="../../../../assets/img/frederik-beck.png" alt="" />
       <span>3</span>
     </button>
