--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
@@ -34,14 +34,14 @@ mat-toolbar {
   &.menu-opened {
     background-color: var(--bg-color);
     cursor: pointer;
-    color: var(--purple3-purple-color) !important;
+    color: var(--purple3-color) !important;
     translate: 0 -1px;
     transform: scale(1.002);
   }
 
   &:hover svg,
   &.menu-opened svg {
-    fill: var(--purple3-purple-color);
+    fill: var(--purple3-color);
   }
 }
 
@@ -102,7 +102,7 @@ mat-toolbar {
     cursor: pointer;
 
     span {
-      color: var(--purple3-purple-color) !important;
+      color: var(--purple3-color) !important;
       transform: scale(1.002);
       translate: 0 -1px;
     }
@@ -127,7 +127,7 @@ mat-toolbar {
     cursor: pointer;
 
     svg {
-      color: var(--purple3-purple-color);
+      color: var(--purple3-color);
       transform: scale(1.05);
     }
   }
