--- a/src/app/main/main-message-area/main-message-area.component.html
+++ b/src/app/main/main-message-area/main-message-area.component.html
@@ -7,3 +7,17 @@
     </mat-card-content>
   </mat-card>
 </section>
+<mat-sidenav-container class="example-container" *ngIf="shouldRun">
+  <mat-sidenav
+    #sidenav
+    mode="side"
+    [(opened)]="opened"
+    position="end"
+  >
+    <app-thread></app-thread>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+   
+  </mat-sidenav-content>
+</mat-sidenav-container>
